Added: format example
